# ai-beauty-chat-hackathon

./: .gitignore  README.md  app.yaml
docs/: INITIAL-REQUIREMENTS.md
docs/superpowers/plans/: 2026-03-25-uphora-implementation.md
docs/superpowers/specs/: 2026-03-25-uphora-beauty-chat-design.md
notebooks/: 01_generate_data.py
scripts/: setup_lakebase.py
src/uphora/: .gitignore  README.md  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
src/uphora/src/uphora/__dist__/: index.html
src/uphora/src/uphora/__dist__/assets/: index-BFkgskqO.js  index-BlyAaNMn.css  index-CAII7n5c.js  index-CjL6EGdv.js
src/uphora/src/uphora/backend/: app.py  db.py  models.py  router.py
src/uphora/src/uphora/backend/agent/: agent.py  graph.py  memory.py  nodes.py  state.py  tools.py
src/uphora/src/uphora/backend/core/: _factory.py
src/uphora/src/uphora/ui/: index.html  main.tsx
src/uphora/src/uphora/ui/components/: ChatWindow.tsx  CustomerSelector.tsx  ProductCard.tsx
src/uphora/src/uphora/ui/hooks/: useChat.ts
src/uphora/src/uphora/ui/routes/: index.tsx
src/uphora/src/uphora/ui/styles/: uphora.css
tests/: conftest.py  test_graph.py  test_memory.py  test_nodes.py  test_router.py  test_state.py  test_tools.py
